Iniciar tela about

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </a>
         <div class="ignoreSpace"></div>
         <a href="./card.html">
-          <img src="./images/card.svg" alt="" class="card">
+          <img src="./images/icons/card.svg" alt="" class="card">
         </a>
         <nav class="menu-hamburger">
           <div class="hamburger-menu">
@@ -84,13 +84,23 @@
           <h2 class="obrasEmDestaqueText">Obras em destaque: </h2>
           <div class="artContainer">
             <img src="./images/arts/campoDeTrigo.jpg" alt="" class="artImage">
-            <h2 class="artName">Arte</h2>
-            <h3 class="artAuthor">Artista</h3>
-            <p class="artPrice">R$ 799.99</p>
-            <input class="artButton" type="button" value="COMPRAR">
-            <img src="" alt="" class="likeButton">
-            <img src="" alt="" class="cardButton">
-          </div>
+            <section class="itensArtContainer">
+              <div class="gridContainerArtContainer">
+                <div class="artContainerNameAuthor">
+                  <h2 class="artName">Arte</h2>
+                  <h3 class="artAuthor">Artista</h3>
+                </div>
+                <p class="artPrice">R$ 799.99</p>
+              </div>
+              <div class="gridContainerArtContainer02">
+                <input class="artButton" type="button" value="COMPRAR">
+                <div class="gridContainerLikeAndCard">
+                  <img src="./images/icons/heart.svg" alt="" class="artContainerIcons">
+                  <img src="./images/icons/card.svg" alt="" class="artContainerIcons">  
+                </div>
+              </div>
+            </section>
+            </div>
         </section>
       </main>
     </section>
