atualizações na home, about e começando desktop

--- a/about.html
+++ b/about.html
@@ -53,14 +53,20 @@
       <main class="mainTelasPequenas">
         <img src="./images/surrealistBanner.png" alt="Despertando a arte que há em você" class="banner">
         <section class="landPageAbout">
-            <h2 class="aboutTitle">O QUE É A  <h2 class="aboutTitleYellow"> IVANTY</h2></h2>
-        </section>
+            <h2 class="aboutTitle">O QUE É A <h2 class="aboutTitleYellow"> IVANTY</h2></h2>
+            <img src="./images/ivantyAbout.png" alt="" class="ivantyImage">
+            <p class="aboutText">Somos uma vitrine digital de obras de arte com o objetivo de criar um espaço no mercado de trabalho para os pequenos artistas, e também incentivar a compra de arte, propondo um local onde os artistas possam expor e vender suas obras.</p>
+            <h2 class="aboutTitle">O QUE NÓS LEVOU A PRODUZIR ESSA VITRINE?</h2>
+            <h4 class="aboutSubtitle">Falta de Oportunidade</h4>
+            <p class="aboutText">Um problema que vários artistas enfrentam no início de sua carreira é a falta de mercado e rentabilidade da arte.</p>
+            <h4 class="aboutSubtitle">O mercado de arte cresce em 50%</h4>
+            <p class="aboutText">O mercado de arte contemporânea teve um desempenho histórico no primeiro semestre de 2022, com crescimento de 50%!</p>     </section>
       </main>
     </section>
 
     <section class="telasGrandes">
       <header class="headerTelasGrandes">
-
+                      
       </header>
       <main class="mainTelasGrandes">
 
