--- a/artists.html
+++ b/artists.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/menu.css">
+    <link rel="stylesheet" href="assets/css/artists.css">
 </head>
 <body>
     <section class="telasPequenas">
@@ -51,11 +52,121 @@
 
       <main class="mainTelasPequenas">
         <img src="./images/popartBanner.png" alt="Despertando a arte que há em você" class="banner">
-
         <section class="artistas">
-            <div class="artistCard"></div>
+            <div class="artistCard">
+              <img src="images/artist.jpg" alt="" class="artistCardPhoto">
+              <div class="artistTexts">
+                <h3 class="artistCardName">Artista</h3>
+                <p class="artistCardBio">Artista Biografia</p>
+                <a href="artist.html">
+                  <input type="button" value="Ver mais" class="seeMoreButton">
+                </a>
+              </div>
+            </div>
         </section>
       </main>
     </section>
+    <footer>
+      <div class="rodape">
+        <div class="top">
+            <a href="./">
+          <div class="logoo">
+              <img class="logotipo" src="./images/Logotipo.svg" alt="Logo">
+            <p>Ivanty</p>
+          </div>
+            </a>
+          <div class="media-icons">
+            <a href="/#">
+              <img
+                class="facebook"
+                src="./images/media-icons/facebook.png"
+                alt="Facebook"
+              />
+            </a>
+            <a href="/#">
+              <img
+                class="twitter"
+                src="./images/media-icons/twitter.png"
+                alt="Twitter"
+              />
+            </a>
+            <a href="/#">
+              <img
+                class="instagram"
+                src="./images/media-icons/instagram.png"
+                alt="Instagram"
+              />
+            </a>
+            <a href="/#">
+              <img
+                class="whatsapp"
+                src="./images/media-icons/whatsapp.png"
+                alt="WhatsApp"
+              />
+            </a>
+          </div>
+        </div>
+        <div class="link-boxes">
+          <ul class="box">
+            <li class="link_name">Navegação</li>
+            <li>
+              <a href="./">Home</a>
+            </li>
+            <li>
+              <a href="./profile">Perfil</a>
+            </li>
+            <li>
+              <a href="./artists">Artistas</a>
+            </li>
+          </ul>
+          <ul class="box">
+            <li class="link_name">Sobre nós</li>
+            <li>
+              <a href="./about">Quem somos</a>
+            </li>
+          </ul>
+          <ul class="box">
+            <li class="link_name">Conta</li>
+            <li>
+              <a href="./profile">Gerenciar perfil</a>
+            </li>
+          </ul> 
+          <ul class="box">
+            <li class="link_name">Contato</li>
+            <li>
+              <a href="/#">email@email.com</a>
+            </li>
+            <li>
+              <a href="/#">11 00000000</a>
+            </li>
+          </ul>
+          <ul class="box input-box">
+            <li class="link_name">Reportar algum erro</li>
+            <li>
+              <input type="text" placeholder="Digite seu nome">
+            </li>
+            <li>
+              <input class="RelateTeuErro" type="text" placeholder="Relate o que aconteceu?">
+            </li>
+            <li>
+              <a href="./">
+                <input type="button" value="Enviar">
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="bottom-details">
+        <div class="bottom_text">
+          <span class="copyright_text">
+            Copyright © 2023 <a href="#">Ivanty.</a>
+          </span>
+          <span class="policy_terms">
+            <a href="/#">Política de Privacidade</a>
+            <a href="/#">Termos e Condições</a>
+          </span>
+        </div>
+      </div>
+    </footer>
     </body>
 </html>
