--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/menu.css">
+    <link rel="stylesheet" href="assets/css/headerPC.css">
+    <link rel="stylesheet" href="assets/css/globalPC.css">
 </head>
 <body>
     <section class="telasPequenas">
@@ -107,14 +109,30 @@
 
     <section class="telasGrandes">
       <header class="headerTelasGrandes">
-
+        <div class="headerGridContainer">
+          <img src="images/Logotipo.svg" alt="" class="logoPC">
+          <a href="profile.html">
+            <p class="menuItemPC">Perfil</p>
+          </a>
+          <a href="profile.html">
+            <p class="menuItemPC">Artista</p>
+          </a>
+          <a href="profile.html">
+            <p class="menuItemPC">Sobre</p>
+          </a>
+          <a href="profile.html">
+            <p class="menuItemPC">Cadastrar-se</p>
+          </a>
+          <input type="text" name="" id="">
+          <img src="images/icons/card.svg" alt="" class="cardPC">
+        </div>
       </header>
       <main class="mainTelasGrandes">
-
+        <img src="images/banner.png" alt="" class="bannerPC">
       </main>  
     </section>
   
-    <footer>
+    <!-- <footer>
       <div class="rodape">
         <div class="top">
             <a href="./">
@@ -215,7 +233,7 @@
           </span>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     </body>
 </html>
