--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/normalize.css">
+    <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
     <title>Ivanty</title>
     <link rel="stylesheet" href="./assets/css/global.css">
     <link rel="stylesheet" href="./assets/css/header.css">
@@ -86,7 +88,7 @@
           <h2 class="obrasEmDestaqueText">Obras em destaque: </h2>
           <div class="artContainer">
             <img src="./images/arts/campoDeTrigo.jpg" alt="" class="artImage">
-            <section class="itensArtContainer">
+            <div class="itensArtContainer">
               <div class="gridContainerArtContainer">
                 <div class="artContainerNameAuthor">
                   <h2 class="artName">Arte</h2>
@@ -101,7 +103,7 @@
                   <img src="./images/icons/card.svg" alt="" class="artContainerIcons">  
                 </div>
               </div>
-            </section>
+            </div>
             </div>
         </section>
       </main>
@@ -129,10 +131,118 @@
       </header>
       <main class="mainTelasGrandes">
         <img src="images/banner.png" alt="" class="bannerPC">
+        <section class="artistasEmDestaquePC">
+          <h2 class="artistasEmDestaqueTextPC">Artistas em Destaque:</h2>
+          <section class="carrosellPC">
+            <a href="./artist.html">
+              <div class="artist">
+                <img src="./images/artist.jpg" alt="" class="artistPhoto">
+                <p class="artistName">Artista</p>
+              </div>
+            </a>      
+            <a href="./artist.html">
+              <div class="artist">
+                <img src="./images/artist.jpg" alt="" class="artistPhoto">
+                <p class="artistName">Artista</p>
+              </div>
+            </a>      
+            <a href="./artist.html">
+              <div class="artist">
+                <img src="./images/artist.jpg" alt="" class="artistPhoto">
+                <p class="artistName">Artista</p>
+              </div>
+            </a>      
+            <a href="./artist.html">
+              <div class="artist">
+                <img src="./images/artist.jpg" alt="" class="artistPhoto">
+                <p class="artistName">Artista</p>
+              </div>
+            </a>      
+            <a href="./artist.html">
+              <div class="artist">
+                <img src="./images/artist.jpg" alt="" class="artistPhoto">
+                <p class="artistName">Artista</p>
+              </div>
+            </a>      
+            <a href="./artist.html">
+              <div class="artist">
+                <img src="./images/artist.jpg" alt="" class="artistPhoto">
+                <p class="artistName">Artista</p>
+              </div>
+            </a>      
+            <a href="./artist.html">
+              <div class="artist">
+                <img src="./images/artist.jpg" alt="" class="artistPhoto">
+                <p class="artistName">Artista</p>
+              </div>
+            </a>      
+            <a href="./artist.html">
+              <div class="artist">
+                <img src="./images/artist.jpg" alt="" class="artistPhoto">
+                <p class="artistName">Artista</p>
+              </div>
+            </a>      
+            <a href="./artist.html">
+              <div class="artist">
+                <img src="./images/artist.jpg" alt="" class="artistPhoto">
+                <p class="artistName">Artista</p>
+              </div>
+            </a>      
+          </section>
+        </section>
+        <section class="categoriasEmDestaquePC">
+          <h2 class="categoriasEmDestaqueTextPC">Categorias em Destaque:</h2>
+          <section class="artCarrosell">
+
+          </section>
+        </section>
+        <section class="obrasEmDestaquePC">
+          <h2 class="obrasEmDestaqueTextPC">Obras em destaque: </h2>
+          <div class="obrasEmDestaqueGrid">
+              <div class="artContainer">
+                <img src="./images/arts/campoDeTrigo.jpg" alt="" class="artImagePC">
+                <div class="itensArtContainer">
+                  <div class="gridContainerArtContainer">
+                    <div class="artContainerNameAuthor">
+                      <h2 class="artName">Arte</h2>
+                      <h3 class="artAuthor">Artista</h3>
+                    </div>
+                    <p class="artPrice">R$ 799.99</p>
+                  </div>
+                  <div class="gridContainerArtContainer02">
+                    <input class="artButton" type="button" value="COMPRAR">
+                    <div class="gridContainerLikeAndCard">
+                      <img src="./images/icons/heart.svg" alt="" class="artContainerIcons">
+                      <img src="./images/icons/card.svg" alt="" class="artContainerIcons">  
+                    </div>
+                  </div>
+                </div>
+                </div>
+              <div class="artContainer">
+                <img src="./images/arts/noiteEstrelada.jpg" alt="" class="artImagePC">
+                <div class="itensArtContainer">
+                  <div class="gridContainerArtContainer">
+                    <div class="artContainerNameAuthor">
+                      <h2 class="artName">Arte</h2>
+                      <h3 class="artAuthor">Artista</h3>
+                    </div>
+                    <p class="artPrice">R$ 799.99</p>
+                  </div>
+                  <div class="gridContainerArtContainer02">
+                    <input class="artButton" type="button" value="COMPRAR">
+                    <div class="gridContainerLikeAndCard">
+                      <img src="./images/icons/heart.svg" alt="" class="artContainerIcons">
+                      <img src="./images/icons/card.svg" alt="" class="artContainerIcons">  
+                    </div>
+                  </div>
+                </div>
+                </div>
+          </div>
+        </section>
       </main>  
     </section>
   
-    <!-- <footer>
+    <footer>
       <div class="rodape">
         <div class="top">
             <a href="./">
@@ -233,7 +343,7 @@
           </span>
         </div>
       </div>
-    </footer> -->
+    </footer> 
 
     </body>
 </html>
