--- a/index.html
+++ b/index.html
@@ -237,6 +237,26 @@
                   </div>
                 </div>
                 </div>
+              <div class="artContainer">
+                <img src="./images/arts/noiteEstrelada.jpg" alt="" class="artImagePC">
+                <div class="itensArtContainer">
+                  <div class="gridContainerArtContainer">
+                    <div class="artContainerNameAuthor">
+                      <h2 class="artName">Arte</h2>
+                      <h3 class="artAuthor">Artista</h3>
+                    </div>
+                    <p class="artPrice">R$ 799.99</p>
+                  </div>
+                  <div class="gridContainerArtContainer02">
+                    <input class="artButton" type="button" value="COMPRAR">
+                    <div class="gridContainerLikeAndCard">
+                      <img src="./images/icons/heart.svg" alt="" class="artContainerIcons">
+                      <img src="./images/icons/card.svg" alt="" class="artContainerIcons">  
+                    </div>
+                  </div>
+                </div>
+                </div>
+              ☻
           </div>
         </section>
       </main>  
