--- a/profile.html
+++ b/profile.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/menu.css">
+    <link rel="stylesheet" href="assets/css/headerPC.css">
+    <link rel="stylesheet" href="assets/css/globalPC.css">
+    <link rel="stylesheet" href="assets/css/carrosell.css">
+    <link rel="stylesheet" href="assets/css/perfil.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 <body>
     <section class="telasPequenas">
@@ -64,12 +69,65 @@
 
     <section class="telasGrandes">
       <header class="headerTelasGrandes">
-
+        <div class="headerGridContainer">
+          <a href="./index.html">
+            <img src="images/Logotipo.svg" alt="" class="logoPC">
+          </a>
+          <a href="profile.html">
+            <p class="menuItemPC">Perfil</p>
+          </a>
+          <a href="artists.html">
+            <p class="menuItemPC">Artista</p>
+          </a>
+          <a href="about.html">
+            <p class="menuItemPC">Sobre</p>
+          </a>
+          <a href="register.html">
+            <p class="menuItemPC">Cadastrar-se</p>
+          </a>
+          <input type="text" name="" id="">
+          <img src="images/icons/card.svg" alt="" class="cardPC">
+        </div>
       </header>
       <main class="mainTelasGrandes">
-
+        <section class="perfil-usuario">
+          <div class="contenedor-perfil">
+              <div class="portada-perfil" style="background-image: url('images/sky.jpg');">
+                  <div class="sombra"></div>
+                  <div class="avatar-perfil">
+                      <img src="images/artist.jpg" alt="img">
+                      <a href="#" class="cambiar-foto">
+                          <i class="fas fa-camera"></i> 
+                          <span> Ver foto</span>
+                      </a>
+                  </div>
+                  <div class="datos-perfil">
+                      <h4 class="titulo-usuario">Nome do usuario</h4>
+                      <p class="bio-usuario">Algumas informações sobre o perfil</p>
+                      <ul class="lista-perfil">
+                          
+                      </ul>
+                  </div>
+                  <div class="opcciones-perfil">
+                      <button type=""><i class="fas fa-wrench"></i></button>
+                  </div>
+              </div>
+              <div class="menu-perfil">
+                  <ul>
+                      <li><a href="#" title=""><i class="icono-perfil fas fa-bullhorn"></i> Publicações</a></li>
+                      <li><a href="#" title=""><i class="icono-perfil fas fa-info-circle"></i> Informações</a></li>
+                      <li><a href="#" title=""><i class="icono-perfil fas fa-grin"></i> Amigos artistas</a></li>
+                      <li><a href="#" title=""><i class="icono-perfil fas fa-camera"></i> Obras</a></li>
+                  </ul>
+              </div>
+              <div class="addObras">
+                <button class="putColor">Adicionar obras</button>
+              </div>
+          </div>
+        </section>
       </main>  
     </section>
+ 
   
     <footer>
       <div class="rodape">
