atualizações na tela artists

--- a/artists.html
+++ b/artists.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/menu.css">
+    <link rel="stylesheet" href="assets/css/headerPC.css">
+    <link rel="stylesheet" href="assets/css/globalPC.css">
+    <link rel="stylesheet" href="assets/css/carrosell.css">
     <link rel="stylesheet" href="assets/css/artists.css">
 </head>
 <body>
@@ -65,6 +68,77 @@
             </div>
         </section>
       </main>
+    </section>
+
+    <section class="telasGrandes">
+      <header class="headerTelasGrandes">
+        <div class="headerGridContainer">
+          <a href="./index.html">
+            <img src="images/Logotipo.svg" alt="" class="logoPC">
+          </a>
+          <a href="profile.html">
+            <p class="menuItemPC">Perfil</p>
+          </a>
+          <a href="artists.html">
+            <p class="menuItemPC">Artista</p>
+          </a>
+          <a href="about.html">
+            <p class="menuItemPC">Sobre</p>
+          </a>
+          <a href="register.html">
+            <p class="menuItemPC">Cadastrar-se</p>
+          </a>
+          <input type="text" name="" id="">
+          <img src="images/icons/card.svg" alt="" class="cardPC">
+        </div>
+      </header>
+      <main class="mainTelasGrandes">
+        <img src="images/popartBanner.png" alt="" class="bannerPC">
+        <section class="artistasPC">
+          <div class="artistGridPC">
+            <div class="artistCardPC">
+              <img src="images/artist.jpg" alt="" class="artistCardPhoto">
+              <div class="artistTexts">
+                <h3 class="artistCardName">Artista</h3>
+                <p class="artistCardBio">Artista Biografia</p>
+                <a href="artist.html">
+                  <input type="button" value="Ver mais" class="seeMoreButton">
+                </a>
+              </div>
+            </div>
+            <div class="artistCardPC">
+              <img src="images/artist.jpg" alt="" class="artistCardPhoto">
+              <div class="artistTexts">
+                <h3 class="artistCardName">Artista</h3>
+                <p class="artistCardBio">Artista Biografia</p>
+                <a href="artist.html">
+                  <input type="button" value="Ver mais" class="seeMoreButton">
+                </a>
+              </div>
+            </div>
+            <div class="artistCardPC">
+              <img src="images/artist.jpg" alt="" class="artistCardPhoto">
+              <div class="artistTexts">
+                <h3 class="artistCardName">Artista</h3>
+                <p class="artistCardBio">Artista Biografia</p>
+                <a href="artist.html">
+                  <input type="button" value="Ver mais" class="seeMoreButton">
+                </a>
+              </div>
+            </div>
+            <div class="artistCardPC">
+              <img src="images/artist.jpg" alt="" class="artistCardPhoto">
+              <div class="artistTexts">
+                <h3 class="artistCardName">Artista</h3>
+                <p class="artistCardBio">Artista Biografia</p>
+                <a href="artist.html">
+                  <input type="button" value="Ver mais" class="seeMoreButton">
+                </a>
+              </div>
+            </div>
+          </div>
+        </section>    
+      </main>  
     </section>
     <footer>
       <div class="rodape">
