atualização na about

--- a/about.html
+++ b/about.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/menu.css">
     <link rel="stylesheet" href="assets/css/about.css">
+    <link rel="stylesheet" href="assets/css/headerPC.css">
+    <link rel="stylesheet" href="assets/css/globalPC.css">
+    <link rel="stylesheet" href="assets/css/aboutPC.css">
 </head>
 <body>
     <section class="telasPequenas">
@@ -66,10 +69,48 @@
 
     <section class="telasGrandes">
       <header class="headerTelasGrandes">
-                      
-      </header>
+        <div class="headerGridContainer">
+          <a href="./index.html">
+            <img src="images/Logotipo.svg" alt="" class="logoPC">
+          </a>
+          <a href="profile.html">
+            <p class="menuItemPC">Perfil</p>
+          </a>
+          <a href="artists.html">
+            <p class="menuItemPC">Artista</p>
+          </a>
+          <a href="about.html">
+            <p class="menuItemPC">Sobre</p>
+          </a>
+          <a href="register.html">
+            <p class="menuItemPC">Cadastrar-se</p>
+          </a>
+          <input type="text" name="" id="">
+          <img src="images/icons/card.svg" alt="" class="cardPC">
+        </div>
+    </header>
       <main class="mainTelasGrandes">
-
+        <img src="images/bannerTigre.png" style="opacity: 0.5;" alt="" class="bannerPC">
+        <section class="contentPC">
+          <section class="contentSectionPC">
+            <img src="./images/bannerTigre.png" alt="" class="aboutImagePC">
+            <article class="aboutTextsPC">
+              <h2 class="aboutTitlePC">O QUE É A </h2><h2 class="ivantyTitle">IVANTY</h2><h2 class="aboutTitlePC">?</h2>
+              <p class="aboutTextPC">Somos uma vitrine digital de obras de arte com o objetivo de criar um espaço no mercado de trabalho para os pequenos artistas, e também incentivar a compra de arte, propondo um local onde os artistas possam expor e vender suas obras.</p>
+            </article>
+          </section>
+          <section class="contentSectionPC">
+            <article class="aboutTextsPC">
+              <h2 class="aboutTitlePC">O QUE NÓS LEVOU A PRODUZIR ESSA VITRINE?</h2>
+              <h3 class="aboutSubtitlePC">Falta de Oportunidade</h3>
+              <p class="aboutTextPC">Um problema que vários artistas enfrentam no início de sua carreira é a falta de mercado e rentabilidade da arte.</p>
+              <h3 class="aboutSubtitlePC">O mercado de arte cresce em 50%</h3>
+              <p class="aboutTextPC">O mercado de arte contemporânea teve um desempenho histórico no primeiro semestre de 2022, com crescimento de 50%!</p>
+              <p class="aboutTextPC">Somos uma vitrine digital de obras de arte com o objetivo de criar um espaço no mercado de trabalho para os pequenos artistas, e também incentivar a compra de arte, propondo um local onde os artistas possam expor e vender suas obras.</p>
+            </article>
+            <img src="./images/brazilianDiversity.jpg" alt="" class="aboutImagePC">
+          </section>
+        </section>
       </main>  
     </section>
   
