--- a/about.html
+++ b/about.html
@@ -16,16 +16,16 @@
 <body>
     <section class="telasPequenas">
       <header class="headerTelasMenores">
-      <div class="gridContainer">
+      <section class="gridContainer">
         <a href="./index.html">
           <img src="./images/Logotipo.svg" alt="" class="logo">
         </a>
-        <div class="ignoreSpace"></div>
+        <section class="ignoreSpace"></section>
         <a href="./card.html">
           <img src="./images/icons/card.svg" alt="" class="card">
         </a>
         <nav class="menu-hamburger">
-          <div class="hamburger-menu">
+          <section class="hamburger-menu">
             <input id="menu__toggle" type="checkbox" />
             <label class="menu__btn" for="menu__toggle">
             <span></span>
@@ -36,13 +36,13 @@
             <li><a class="menu__item" href="./about.html">Sobre</a></li>
             <li><a class="menu__item" href="./register.html">Cadastrar-se</a></li>
             </ul>
-          </div>
+          </section>
         </nav>
-      </div>
+      </section>
         
-        <div class="searchButton">
+        <section class="searchButton">
 
-        </div>
+        </section>
         <nav class="quickNavigation">
           <a href="./artists.html">
             <p class="quickNavigationP">Artistas</p>
@@ -69,7 +69,7 @@
 
     <section class="telasGrandes">
       <header class="headerTelasGrandes">
-        <div class="headerGridContainer">
+        <section class="headerGridContainer">
           <a href="./index.html">
             <img src="images/Logotipo.svg" alt="" class="logoPC">
           </a>
@@ -87,7 +87,7 @@
           </a>
           <input type="text" name="" id="">
           <img src="images/icons/card.svg" alt="" class="cardPC">
-        </div>
+        </section>
     </header>
       <main class="mainTelasGrandes">
         <img src="images/bannerTigre.png" style="opacity: 0.5;" alt="" class="bannerPC">
@@ -108,22 +108,22 @@
               <p class="aboutTextPC">O mercado de arte contemporânea teve um desempenho histórico no primeiro semestre de 2022, com crescimento de 50%!</p>
               <p class="aboutTextPC">Somos uma vitrine digital de obras de arte com o objetivo de criar um espaço no mercado de trabalho para os pequenos artistas, e também incentivar a compra de arte, propondo um local onde os artistas possam expor e vender suas obras.</p>
             </article>
-            <img src="./images/brazilianDiversity.jpg" alt="" class="aboutImagePC">
+            <img src="./images/braziliansectionersity.jpg" alt="" class="aboutImagePC">
           </section>
         </section>
       </main>  
     </section>
   
     <footer>
-      <div class="rodape">
-        <div class="top">
+      <section class="rodape">
+        <section class="top">
             <a href="./">
-          <div class="logoo">
+          <section class="logoo">
               <img class="logotipo" src="./images/Logotipo.svg" alt="Logo">
             <p>Ivanty</p>
-          </div>
+          </section>
             </a>
-          <div class="media-icons">
+          <section class="media-icons">
             <a href="/#">
               <img
                 class="facebook"
@@ -152,9 +152,9 @@
                 alt="WhatsApp"
               />
             </a>
-          </div>
-        </div>
-        <div class="link-boxes">
+          </section>
+        </section>
+        <section class="link-boxes">
           <ul class="box">
             <li class="link_name">Navegação</li>
             <li>
@@ -202,10 +202,10 @@
               </a>
             </li>
           </ul>
-        </div>
-      </div>
-      <div class="bottom-details">
-        <div class="bottom_text">
+        </section>
+      </section>
+      <section class="bottom-details">
+        <section class="bottom_text">
           <span class="copyright_text">
             Copyright © 2023 <a href="#">Ivanty.</a>
           </span>
@@ -213,8 +213,8 @@
             <a href="/#">Política de Privacidade</a>
             <a href="/#">Termos e Condições</a>
           </span>
-        </div>
-      </div>
+        </section>
+      </section>
     </footer>
 
     </body>
