--- a/profile.html
+++ b/profile.html
@@ -17,16 +17,16 @@
 <body>
     <section class="telasPequenas">
       <header class="headerTelasMenores">
-      <div class="gridContainer">
+      <section class="gridContainer">
         <a href="./index.html">
           <img src="./images/Logotipo.svg" alt="" class="logo">
         </a>
-        <div class="ignoreSpace"></div>
+        <section class="ignoreSpace"></section>
         <a href="./card.html">
           <img src="./images/card.svg" alt="" class="card">
         </a>
         <nav class="menu-hamburger">
-          <div class="hamburger-menu">
+          <section class="hamburger-menu">
             <input id="menu__toggle" type="checkbox" />
             <label class="menu__btn" for="menu__toggle">
             <span></span>
@@ -37,13 +37,13 @@
             <li><a class="menu__item" href="./about.html">Sobre</a></li>
             <li><a class="menu__item" href="./register.html">Cadastrar-se</a></li>
             </ul>
-          </div>
+          </section>
         </nav>
-      </div>
+      </section>
         
-        <div class="searchButton">
+        <section class="searchButton">
 
-        </div>
+        </section>
         <nav class="quickNavigation">
             <a href="./index.html">
                 <p class="quickNavigationP">Home</p>
@@ -70,7 +70,7 @@
 
     <section class="telasGrandes">
       <header class="headerTelasGrandes">
-        <div class="headerGridContainer">
+        <section class="headerGridContainer">
           <a href="./index.html">
             <img src="images/Logotipo.svg" alt="" class="logoPC">
           </a>
@@ -88,58 +88,58 @@
           </a>
           <input type="text" name="" id="">
           <img src="images/icons/card.svg" alt="" class="cardPC">
-        </div>
+        </section>
       </header>
       <main class="mainTelasGrandes">
         <section class="perfil-usuario">
-          <div class="contenedor-perfil">
-              <div class="portada-perfil" style="background-image: url('images/sky.jpg');">
-                  <div class="sombra"></div>
-                  <div class="avatar-perfil">
+          <section class="contenedor-perfil">
+              <section class="portada-perfil" style="background-image: url('images/sky.jpg');">
+                  <section class="sombra"></section>
+                  <section class="avatar-perfil">
                       <img src="images/artist.jpg" alt="img">
                       <a href="#" class="cambiar-foto">
                           <i class="fas fa-camera"></i> 
                           <span> Ver foto</span>
                       </a>
-                  </div>
-                  <div class="datos-perfil">
+                  </section>
+                  <section class="datos-perfil">
                       <h4 class="titulo-usuario">Nome do usuario</h4>
                       <p class="bio-usuario">Algumas informações sobre o perfil</p>
                       <ul class="lista-perfil">
                           
                       </ul>
-                  </div>
-                  <div class="opcciones-perfil">
+                  </section>
+                  <section class="opcciones-perfil">
                       <button type=""><i class="fas fa-wrench"></i></button>
-                  </div>
-              </div>
-              <div class="menu-perfil">
+                  </section>
+              </section>
+              <section class="menu-perfil">
                   <ul>
                       <li><a href="#" title=""><i class="icono-perfil fas fa-bullhorn"></i> Publicações</a></li>
                       <li><a href="#" title=""><i class="icono-perfil fas fa-info-circle"></i> Informações</a></li>
                       <li><a href="#" title=""><i class="icono-perfil fas fa-grin"></i> Amigos artistas</a></li>
                       <li><a href="#" title=""><i class="icono-perfil fas fa-camera"></i> Obras</a></li>
                   </ul>
-              </div>
-              <div class="addObras">
+              </section>
+              <section class="addObras">
                 <button class="putColor">Adicionar obras</button>
-              </div>
-          </div>
+              </section>
+          </section>
         </section>
       </main>  
     </section>
  
   
     <footer>
-      <div class="rodape">
-        <div class="top">
+      <section class="rodape">
+        <section class="top">
             <a href="./">
-          <div class="logoo">
+          <section class="logoo">
               <img class="logotipo" src="./images/Logotipo.svg" alt="Logo">
             <p>Ivanty</p>
-          </div>
+          </section>
             </a>
-          <div class="media-icons">
+          <section class="media-icons">
             <a href="/#">
               <img
                 class="facebook"
@@ -168,9 +168,9 @@
                 alt="WhatsApp"
               />
             </a>
-          </div>
-        </div>
-        <div class="link-boxes">
+          </section>
+        </section>
+        <section class="link-boxes">
           <ul class="box">
             <li class="link_name">Navegação</li>
             <li>
@@ -218,10 +218,10 @@
               </a>
             </li>
           </ul>
-        </div>
-      </div>
-      <div class="bottom-details">
-        <div class="bottom_text">
+        </section>
+      </section>
+      <section class="bottom-details">
+        <section class="bottom_text">
           <span class="copyright_text">
             Copyright © 2023 <a href="#">Ivanty.</a>
           </span>
@@ -229,8 +229,8 @@
             <a href="/#">Política de Privacidade</a>
             <a href="/#">Termos e Condições</a>
           </span>
-        </div>
-      </div>
+        </section>
+      </section>
     </footer>
 
     </body>
