--- a/artists.html
+++ b/artists.html
@@ -16,16 +16,16 @@
 <body>
     <section class="telasPequenas">
       <header class="headerTelasMenores">
-      <div class="gridContainer">
+      <section class="gridContainer">
         <a href="./index.html">
           <img src="./images/Logotipo.svg" alt="" class="logo">
         </a>
-        <div class="ignoreSpace"></div>
+        <section class="ignoreSpace"></section>
         <a href="./card.html">
           <img src="./images/card.svg" alt="" class="card">
         </a>
         <nav class="menu-hamburger">
-          <div class="hamburger-menu">
+          <section class="hamburger-menu">
             <input id="menu__toggle" type="checkbox" />
             <label class="menu__btn" for="menu__toggle">
             <span></span>
@@ -36,13 +36,13 @@
             <li><a class="menu__item" href="/about">Sobre</a></li>
             <li><a class="menu__item" href="/register">Cadastrar-se</a></li>
             </ul>
-          </div>
+          </section>
         </nav>
-      </div>
+      </section>
         
-        <div class="searchButton">
+        <section class="searchButton">
 
-        </div>
+        </section>
         <nav class="quickNavigation">
           <a href="./artists.html">
             <p class="quickNavigationP">Artistas</p>
@@ -56,23 +56,23 @@
       <main class="mainTelasPequenas">
         <img src="./images/popartBanner.png" alt="Despertando a arte que há em você" class="banner">
         <section class="artistas">
-            <div class="artistCard">
+            <section class="artistCard">
               <img src="images/artist.jpg" alt="" class="artistCardPhoto">
-              <div class="artistTexts">
+              <section class="artistTexts">
                 <h3 class="artistCardName">Artista</h3>
                 <p class="artistCardBio">Artista Biografia</p>
                 <a href="artist.html">
                   <input type="button" value="Ver mais" class="seeMoreButton">
                 </a>
-              </div>
-            </div>
+              </section>
+            </section>
         </section>
       </main>
     </section>
 
     <section class="telasGrandes">
       <header class="headerTelasGrandes">
-        <div class="headerGridContainer">
+        <section class="headerGridContainer">
           <a href="./index.html">
             <img src="images/Logotipo.svg" alt="" class="logoPC">
           </a>
@@ -90,66 +90,66 @@
           </a>
           <input type="text" name="" id="">
           <img src="images/icons/card.svg" alt="" class="cardPC">
-        </div>
+        </section>
       </header>
       <main class="mainTelasGrandes">
         <img src="images/popartBanner.png" alt="" class="bannerPC">
         <section class="artistasPC">
-          <div class="artistGridPC">
-            <div class="artistCardPC">
+          <section class="artistGridPC">
+            <section class="artistCardPC">
               <img src="images/artist.jpg" alt="" class="artistCardPhoto">
-              <div class="artistTexts">
+              <section class="artistTexts">
                 <h3 class="artistCardName">Artista</h3>
                 <p class="artistCardBio">Artista Biografia</p>
                 <a href="artist.html">
                   <input type="button" value="Ver mais" class="seeMoreButton">
                 </a>
-              </div>
-            </div>
-            <div class="artistCardPC">
+              </section>
+            </section>
+            <section class="artistCardPC">
               <img src="images/artist.jpg" alt="" class="artistCardPhoto">
-              <div class="artistTexts">
+              <section class="artistTexts">
                 <h3 class="artistCardName">Artista</h3>
                 <p class="artistCardBio">Artista Biografia</p>
                 <a href="artist.html">
                   <input type="button" value="Ver mais" class="seeMoreButton">
                 </a>
-              </div>
-            </div>
-            <div class="artistCardPC">
+              </section>
+            </section>
+            <section class="artistCardPC">
               <img src="images/artist.jpg" alt="" class="artistCardPhoto">
-              <div class="artistTexts">
+              <section class="artistTexts">
                 <h3 class="artistCardName">Artista</h3>
                 <p class="artistCardBio">Artista Biografia</p>
                 <a href="artist.html">
                   <input type="button" value="Ver mais" class="seeMoreButton">
                 </a>
-              </div>
-            </div>
-            <div class="artistCardPC">
+              </section>
+            </section>
+            <section class="artistCardPC">
               <img src="images/artist.jpg" alt="" class="artistCardPhoto">
-              <div class="artistTexts">
+              <section class="artistTexts">
                 <h3 class="artistCardName">Artista</h3>
                 <p class="artistCardBio">Artista Biografia</p>
                 <a href="artist.html">
                   <input type="button" value="Ver mais" class="seeMoreButton">
                 </a>
-              </div>
-            </div>
-          </div>
+              </section>
+            </section>
+          </section>
         </section>    
       </main>  
     </section>
     <footer>
-      <div class="rodape">
-        <div class="top">
+      <section class="rodape">
+        <section class="top">
             <a href="./">
-          <div class="logoo">
+          <section class="logoo">
               <img class="logotipo" src="./images/Logotipo.svg" alt="Logo">
             <p>Ivanty</p>
-          </div>
+          </section>
             </a>
-          <div class="media-icons">
+          <section class="media-icons">
             <a href="/#">
               <img
                 class="facebook"
@@ -178,9 +178,9 @@
                 alt="WhatsApp"
               />
             </a>
-          </div>
-        </div>
-        <div class="link-boxes">
+          </section>
+        </section>
+        <section class="link-boxes">
           <ul class="box">
             <li class="link_name">Navegação</li>
             <li>
@@ -228,10 +228,10 @@
               </a>
             </li>
           </ul>
-        </div>
-      </div>
-      <div class="bottom-details">
-        <div class="bottom_text">
+        </section>
+      </section>
+      <section class="bottom-details">
+        <section class="bottom_text">
           <span class="copyright_text">
             Copyright © 2023 <a href="#">Ivanty.</a>
           </span>
@@ -239,8 +239,8 @@
             <a href="/#">Política de Privacidade</a>
             <a href="/#">Termos e Condições</a>
           </span>
-        </div>
-      </div>
+        </section>
+      </section>
     </footer>
     </body>
 </html>
