--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 <body>
     <section class="telasPequenas">
       <header class="headerTelasMenores">
-      <div class="gridContainer">
+      <section class="gridContainer">
         <a href="./index.html">
           <img src="./images/Logotipo.svg" alt="" class="logo">
         </a>
-        <div class="ignoreSpace"></div>
+        <section class="ignoreSpace"></section>
         <a href="./card.html">
           <img src="./images/icons/card.svg" alt="" class="card">
         </a>
         <nav class="menu-hamburger">
-          <div class="hamburger-menu">
+          <section class="hamburger-menu">
             <input id="menu__toggle" type="checkbox" />
             <label class="menu__btn" for="menu__toggle">
             <span></span>
@@ -37,13 +37,13 @@
             <li><a class="menu__item" href="./about.html">Sobre</a></li>
             <li><a class="menu__item" href="./register.html">Cadastrar-se</a></li>
             </ul>
-          </div>
+          </section>
         </nav>
-      </div>
+      </section>
         
-        <div class="searchButton">
+        <section class="searchButton">
 
-        </div>
+        </section>
         <nav class="quickNavigation">
           <a href="./artists.html">
             <p class="quickNavigationP">Artistas</p>
@@ -58,26 +58,26 @@
         <img src="./images/banner.png" alt="Despertando a arte que há em você" class="banner">
         <section class="artistasEmDestaque">
           <h2 class="artistasEmDestaqueText">Artistas em Destaque: </h2>
-          <div class="carrosell">
+          <section class="carrosell">
             <a href="./artist.html">
-              <div class="artist">
+              <section class="artist">
                 <img src="./images/artist.jpg" alt="" class="artistPhoto">
                 <p class="artistName">Artista</p>
-              </div>
+              </section>
             </a>      
             <a href="./artist.html">
-              <div class="artist">
+              <section class="artist">
                 <img src="./images/artist.jpg" alt="" class="artistPhoto">
                 <p class="artistName">Artista</p>
-              </div>
+              </section>
             </a>      
             <a href="./artist.html">
-              <div class="artist">
+              <section class="artist">
                 <img src="./images/artist.jpg" alt="" class="artistPhoto">
                 <p class="artistName">Artista</p>
-              </div>
+              </section>
             </a>      
-          </div>
+          </section>
         </section>
         <section class="estiloArtisticosEmDestaque">
           <h2 class="estiloArtisticosEmDestaqueText">Categorias em Destaque: </h2>
@@ -93,32 +93,32 @@
         </section>
         <section class="obrasEmDestaque">
           <h2 class="obrasEmDestaqueText">Obras em destaque: </h2>
-          <div class="artContainer">
+          <section class="artContainer">
             <img src="./images/arts/campoDeTrigo.jpg" alt="" class="artImage">
-            <div class="itensArtContainer">
-              <div class="gridContainerArtContainer">
-                <div class="artContainerNameAuthor">
+            <section class="itensArtContainer">
+              <section class="gridContainerArtContainer">
+                <section class="artContainerNameAuthor">
                   <h2 class="artName">Arte</h2>
                   <h3 class="artAuthor">Artista</h3>
-                </div>
+                </section>
                 <p class="artPrice">R$ 799.99</p>
-              </div>
-              <div class="gridContainerArtContainer02">
+              </section>
+              <section class="gridContainerArtContainer02">
                 <input class="artButton" type="button" value="COMPRAR">
-                <div class="gridContainerLikeAndCard">
+                <section class="gridContainerLikeAndCard">
                   <img src="./images/icons/heart.svg" alt="" class="artContainerIcons">
                   <img src="./images/icons/card.svg" alt="" class="artContainerIcons">  
-                </div>
-              </div>
-            </div>
-            </div>
+                </section>
+              </section>
+            </section>
+            </section>
         </section>
       </main>
     </section>
 
     <section class="telasGrandes">
       <header class="headerTelasGrandes">
-          <div class="headerGridContainer">
+          <section class="headerGridContainer">
             <a href="./index.html">
               <img src="images/Logotipo.svg" alt="" class="logoPC">
             </a>
@@ -136,7 +136,7 @@
             </a>
             <input type="text" name="" id="">
             <img src="images/icons/card.svg" alt="" class="cardPC">
-          </div>
+          </section>
       </header>
       <main class="mainTelasGrandes">
         <img src="images/banner.png" alt="" class="bannerPC">
@@ -144,58 +144,58 @@
           <h2 class="artistasEmDestaqueTextPC">Artistas em Destaque:</h2>
           <section class="carrosellPC">
             <a href="./artist.html">
-              <div class="artist">
+              <section class="artist">
                 <img src="./images/artist.jpg" alt="" class="artistPhoto">
                 <p class="artistName">Artista</p>
-              </div>
+              </section>
             </a>      
             <a href="./artist.html">
-              <div class="artist">
+              <section class="artist">
                 <img src="./images/artist.jpg" alt="" class="artistPhoto">
                 <p class="artistName">Artista</p>
-              </div>
+              </section>
             </a>      
             <a href="./artist.html">
-              <div class="artist">
+              <section class="artist">
                 <img src="./images/artist.jpg" alt="" class="artistPhoto">
                 <p class="artistName">Artista</p>
-              </div>
+              </section>
             </a>      
             <a href="./artist.html">
-              <div class="artist">
+              <section class="artist">
                 <img src="./images/artist.jpg" alt="" class="artistPhoto">
                 <p class="artistName">Artista</p>
-              </div>
+              </section>
             </a>      
             <a href="./artist.html">
-              <div class="artist">
+              <section class="artist">
                 <img src="./images/artist.jpg" alt="" class="artistPhoto">
                 <p class="artistName">Artista</p>
-              </div>
+              </section>
             </a>      
             <a href="./artist.html">
-              <div class="artist">
+              <section class="artist">
                 <img src="./images/artist.jpg" alt="" class="artistPhoto">
                 <p class="artistName">Artista</p>
-              </div>
+              </section>
             </a>      
             <a href="./artist.html">
-              <div class="artist">
+              <section class="artist">
                 <img src="./images/artist.jpg" alt="" class="artistPhoto">
                 <p class="artistName">Artista</p>
-              </div>
+              </section>
             </a>      
             <a href="./artist.html">
-              <div class="artist">
+              <section class="artist">
                 <img src="./images/artist.jpg" alt="" class="artistPhoto">
                 <p class="artistName">Artista</p>
-              </div>
+              </section>
             </a>      
             <a href="./artist.html">
-              <div class="artist">
+              <section class="artist">
                 <img src="./images/artist.jpg" alt="" class="artistPhoto">
                 <p class="artistName">Artista</p>
-              </div>
+              </section>
             </a>      
           </section>
         </section>
@@ -215,79 +215,79 @@
         </section>
         <section class="obrasEmDestaquePC">
           <h2 class="obrasEmDestaqueTextPC">Obras em destaque: </h2>
-          <div class="obrasEmDestaqueGrid">
-              <div class="artContainer">
+          <section class="obrasEmDestaqueGrid">
+              <section class="artContainer">
                 <img src="./images/arts/campoDeTrigo.jpg" alt="" class="artImagePC">
-                <div class="itensArtContainer">
-                  <div class="gridContainerArtContainer">
-                    <div class="artContainerNameAuthor">
+                <section class="itensArtContainer">
+                  <section class="gridContainerArtContainer">
+                    <section class="artContainerNameAuthor">
                       <h2 class="artName">Arte</h2>
                       <h3 class="artAuthor">Artista</h3>
-                    </div>
+                    </section>
                     <p class="artPrice">R$ 799.99</p>
-                  </div>
-                  <div class="gridContainerArtContainer02">
+                  </section>
+                  <section class="gridContainerArtContainer02">
                     <input class="artButton" type="button" value="COMPRAR">
-                    <div class="gridContainerLikeAndCard">
+                    <section class="gridContainerLikeAndCard">
                       <img src="./images/icons/heart.svg" alt="" class="artContainerIcons">
                       <img src="./images/icons/card.svg" alt="" class="artContainerIcons">  
-                    </div>
-                  </div>
-                </div>
-                </div>
-              <div class="artContainer">
+                    </section>
+                  </section>
+                </section>
+                </section>
+              <section class="artContainer">
                 <img src="./images/arts/noiteEstrelada.jpg" alt="" class="artImagePC">
-                <div class="itensArtContainer">
-                  <div class="gridContainerArtContainer">
-                    <div class="artContainerNameAuthor">
+                <section class="itensArtContainer">
+                  <section class="gridContainerArtContainer">
+                    <section class="artContainerNameAuthor">
                       <h2 class="artName">Arte</h2>
                       <h3 class="artAuthor">Artista</h3>
-                    </div>
+                    </section>
                     <p class="artPrice">R$ 799.99</p>
-                  </div>
-                  <div class="gridContainerArtContainer02">
+                  </section>
+                  <section class="gridContainerArtContainer02">
                     <input class="artButton" type="button" value="COMPRAR">
-                    <div class="gridContainerLikeAndCard">
+                    <section class="gridContainerLikeAndCard">
                       <img src="./images/icons/heart.svg" alt="" class="artContainerIcons">
                       <img src="./images/icons/card.svg" alt="" class="artContainerIcons">  
-                    </div>
-                  </div>
-                </div>
-                </div>
-              <div class="artContainer">
+                    </section>
+                  </section>
+                </section>
+                </section>
+              <section class="artContainer">
                 <img src="./images/arts/noiteEstrelada.jpg" alt="" class="artImagePC">
-                <div class="itensArtContainer">
-                  <div class="gridContainerArtContainer">
-                    <div class="artContainerNameAuthor">
+                <section class="itensArtContainer">
+                  <section class="gridContainerArtContainer">
+                    <section class="artContainerNameAuthor">
                       <h2 class="artName">Arte</h2>
                       <h3 class="artAuthor">Artista</h3>
-                    </div>
+                    </section>
                     <p class="artPrice">R$ 799.99</p>
-                  </div>
-                  <div class="gridContainerArtContainer02">
+                  </section>
+                  <section class="gridContainerArtContainer02">
                     <input class="artButton" type="button" value="COMPRAR">
-                    <div class="gridContainerLikeAndCard">
+                    <section class="gridContainerLikeAndCard">
                       <img src="./images/icons/heart.svg" alt="" class="artContainerIcons">
                       <img src="./images/icons/card.svg" alt="" class="artContainerIcons">  
-                    </div>
-                  </div>
-                </div>
-                </div>
-          </div>
+                    </section>
+                  </section>
+                </section>
+                </section>
+          </section>
         </section>
       </main>  
     </section>
   
     <footer>
-      <div class="rodape">
-        <div class="top">
+      <section class="rodape">
+        <section class="top">
             <a href="./">
-          <div class="logoo">
+          <section class="logoo">
               <img class="logotipo" src="./images/Logotipo.svg" alt="Logo">
             <p>Ivanty</p>
-          </div>
+          </section>
             </a>
-          <div class="media-icons">
+          <section class="media-icons">
             <a href="/#">
               <img
                 class="facebook"
@@ -316,9 +316,9 @@
                 alt="WhatsApp"
               />
             </a>
-          </div>
-        </div>
-        <div class="link-boxes">
+          </section>
+        </section>
+        <section class="link-boxes">
           <ul class="box">
             <li class="link_name">Navegação</li>
             <li>
@@ -366,10 +366,10 @@
               </a>
             </li>
           </ul>
-        </div>
-      </div>
-      <div class="bottom-details">
-        <div class="bottom_text">
+        </section>
+      </section>
+      <section class="bottom-details">
+        <section class="bottom_text">
           <span class="copyright_text">
             Copyright © 2023 <a href="#">Ivanty.</a>
           </span>
@@ -377,8 +377,8 @@
             <a href="/#">Política de Privacidade</a>
             <a href="/#">Termos e Condições</a>
           </span>
-        </div>
-      </div>
+        </section>
+      </section>
     </footer> 
 
     </body>
