--- a/profile.html
+++ b/profile.html
@@ -12,11 +12,12 @@
     <link rel="stylesheet" href="assets/css/globalPC.css">
     <link rel="stylesheet" href="assets/css/carrosell.css">
     <link rel="stylesheet" href="assets/css/perfil.css">
+    <link rel="stylesheet" href="assets/css/perfilMobile.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 <body>
     <section class="telasPequenas">
-      <header class="headerTelasMenores">
+      <header class="headerTelasMenores headerProfile">
       <section class="gridContainer">
         <a href="./index.html">
           <img src="./images/Logotipo.svg" alt="" class="logo">
@@ -58,12 +59,16 @@
       </header> 
 
       <main class="mainTelasPequenas">
-        
-        <section class="userInformations">
-
-        </section>
-        <section class="beArtist">
-
+        <section class="perfilContentMobile">
+          <img src="images/sky.jpg" alt="" class="banner bannerProfile">
+          <section class="layoutPerfilMobile">
+            <img src="images/artist.jpg" alt="" class="perfilPhotoMobile">
+            <section class="perfilTextsMobile">
+              <h2 class="perfilNameMobile">Seu nome</h2>
+              <h3 class="perfilBiographName">Sua biografia</h3>
+            </section>
+            <p class="perfilAboutMobile">Seu resumo</p>
+          </section>
         </section>
       </main>
     </section>
